--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,14 @@
 ---
 layout: default
 ---
-<h1>{{ page.title}}</h1>
-<p class="subtitle">{{ page.date | date: "%B %-d, %Y" }}</p>
+<article class="post">
 
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title | escape }}</h1>
+  </header>
 
-{{ content }}
+  <div class="post-content">
+    {{ content }}
+  </div>
+
+</article>
