--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="{{ "/assets/css/tufte.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/latex.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/toolofthought.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 </head>
