j / plot / surface 이미지 추가

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,8 @@
         {{ content }}
       </div>
     </main>
-
+    <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
   </body>
 
 </html>
