--- a/assets/css/toolofthought.css
+++ b/assets/css/toolofthought.css
@@ -33,3 +33,10 @@ img.badge {
       max-height: 60px;
 }
 
+xmp.code { font-size: 0.9rem;
+           width: 52.5%;
+           margin-left: 2.5%;
+           overflow-x: auto; }
+
+xmp.code.fullwidth { width: 90%; }
+
