--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 <div class="home">
 
   <h1 class="page-heading">Posts</h1>
@@ -23,3 +23,4 @@ layout: default
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
 
 </div>
+</article>
